--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "Apache License v2",
   "dependencies": {
     "json-server": "^0.14.2",
+    "json-stable-stringify": "^1.0.1",
     "minimist": "^1.2.0"
   }
 }
