--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "json-server": "^0.14.2",
     "json-stable-stringify": "^1.0.1",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "moment": "^2.24.0"
   }
 }
