--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "json-server": "^0.14.2",
     "json-stable-stringify": "^1.0.1",
     "minimist": "^1.2.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "winston": "^3.1.0"
   }
 }
